--- a/.github/FUNDING.yml
+++ b/.github/FUNDING.yml
@@ -12,4 +12,4 @@ lfx_crowdfunding: # Replace with a single LFX Crowdfunding project-name e.g., cl
 polar: # Replace with a single Polar username
 buy_me_a_coffee: antonio13
 thanks_dev: # Replace with a single thanks.dev username
-custom: https://www.paypal.com/donate/?hosted_button_id=DN574F28FYUNG
+custom: ['https://www.paypal.com/donate/?hosted_button_id=DN574F28FYUNG', 'https://mepagaumcafe.com.br/antonio75/']
